# Upholsterer2k

./: .gitignore  CMakeLists.txt  constant_abbreviations.c  constants.c  constants_helpers.c  error.c  hashmap.c  lexer.c  main.c  opcode_specification.c  opcodes.c  parser.c  string_view.c  string_view_utils.c  token.c  token_vector.c  upholsterer2k.c
.github/workflows/: cmake.yml
include/: constants.h  upholsterer2k.h
include/upholsterer2k/: constants.h  error.h  hashmap.h  lexer.h  opcode_specification.h  opcodes.h  parser.h  source_file.h  string_view.h  string_view_utils.h  token.h  token_vector.h  types.h  upholsterer2k.h  vector.h
src/: constants_helpers.c  error.c  hashmap.c  main.c  opcode_specification.c  parser.c  string_view.c  token.c  token_vector.c  upholsterer2k.c
tools/: json2constants.py  opcodes2c.py
